// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DeclareComponent Basic Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Basic ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [],
      "rendersType": null,
      "rest": null,
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Export Babel 1`] = `
{
  "body": [
    {
      "declaration": {
        "id": {
          "name": "Foo",
          "type": "Identifier",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "type": "AnyTypeAnnotation",
            },
          },
        },
        "type": "DeclareVariable",
      },
      "default": false,
      "source": null,
      "specifiers": [],
      "type": "DeclareExportDeclaration",
    },
    {
      "declaration": {
        "id": {
          "name": "Bar",
          "type": "Identifier",
          "typeAnnotation": {
            "type": "TypeAnnotation",
            "typeAnnotation": {
              "type": "AnyTypeAnnotation",
            },
          },
        },
        "type": "DeclareVariable",
      },
      "default": true,
      "source": null,
      "specifiers": [],
      "type": "DeclareExportDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Export ESTree 1`] = `
{
  "body": [
    {
      "declaration": {
        "id": {
          "name": "Foo",
          "optional": false,
          "type": "Identifier",
          "typeAnnotation": null,
        },
        "params": [],
        "rendersType": null,
        "rest": null,
        "type": "DeclareComponent",
        "typeParameters": null,
      },
      "default": false,
      "source": null,
      "specifiers": [],
      "type": "DeclareExportDeclaration",
    },
    {
      "declaration": {
        "id": {
          "name": "Bar",
          "optional": false,
          "type": "Identifier",
          "typeAnnotation": null,
        },
        "params": [],
        "rendersType": null,
        "rest": null,
        "type": "DeclareComponent",
        "typeParameters": null,
      },
      "default": true,
      "source": null,
      "specifiers": [],
      "type": "DeclareExportDeclaration",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Params and renders Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Params and renders ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "local": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "type": "StringTypeAnnotation",
              },
            },
          },
          "name": {
            "name": "bar",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "shorthand": true,
          "type": "ComponentParameter",
        },
      ],
      "rendersType": {
        "operator": "renders",
        "type": "TypeOperator",
        "typeAnnotation": {
          "id": {
            "name": "Foo",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": null,
          },
          "type": "GenericTypeAnnotation",
          "typeParameters": null,
        },
      },
      "rest": null,
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Rest param Babel 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "type": "Identifier",
        "typeAnnotation": {
          "type": "TypeAnnotation",
          "typeAnnotation": {
            "type": "AnyTypeAnnotation",
          },
        },
      },
      "type": "DeclareVariable",
    },
  ],
  "type": "Program",
}
`;

exports[`DeclareComponent Rest param ESTree 1`] = `
{
  "body": [
    {
      "id": {
        "name": "Foo",
        "optional": false,
        "type": "Identifier",
        "typeAnnotation": null,
      },
      "params": [
        {
          "argument": {
            "name": "rest",
            "optional": false,
            "type": "Identifier",
            "typeAnnotation": {
              "type": "TypeAnnotation",
              "typeAnnotation": {
                "callProperties": [],
                "exact": false,
                "indexers": [],
                "inexact": false,
                "internalSlots": [],
                "properties": [
                  {
                    "abstract": false,
                    "computed": false,
                    "init": null,
                    "key": {
                      "name": "bar",
                      "optional": false,
                      "type": "Identifier",
                      "typeAnnotation": null,
                    },
                    "kind": "init",
                    "method": false,
                    "optional": false,
                    "override": false,
                    "proto": false,
                    "static": false,
                    "tsAccessibility": null,
                    "type": "ObjectTypeProperty",
                    "value": {
                      "type": "StringTypeAnnotation",
                    },
                    "variance": null,
                  },
                ],
                "type": "ObjectTypeAnnotation",
              },
            },
          },
          "type": "RestElement",
        },
      ],
      "rendersType": null,
      "rest": null,
      "type": "DeclareComponent",
      "typeParameters": null,
    },
  ],
  "type": "Program",
}
`;
